test/statements/select/multipleOtherwise.good
multipleOtherwise.chpl:4: error: Select has multiple otherwise clauses
